# arduino-motorshield

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  motor_shield.h
src/: Motor.cpp  Motor.h  MotorShield.cpp  MotorShield.h  motor_shield.cpp  motor_shield.h
test/: CMakeLists.txt  MotorTest.cpp  motor_shield_test.cpp  test_something.cpp
test/arduino/: Arduino.cpp  Arduino.h
